5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1638_652.log
== TEST (2019-04-11 10:52:14) 
-- CODE:
x=float(input("qual seu numero?"))
f= x//100 %10
print(f)
if (100<=x<=999):
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:19) 
-- CODE:
x=float(input("qual seu numero?"))
f= x//100 %10
print(f)

-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:37) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//100 %100
print(f)
	

-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:50) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//10 %100
print(f)
	

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:06) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
print(f)
	

-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:19) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
print(f)
	

-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:32) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
h= x%f
print (f,h)
	

-- OUTPUT:
28 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:37) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
h= x%f
print (f,h)
	

-- OUTPUT:
28 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:40) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
h= x%f
print (f,h)
	

-- OUTPUT:
28 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:22) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
h= x%f
if(h==0):
	print(SIM)
else:
	print(NAO)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(SIM)
NameError: name 'SIM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:36) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
h= x%f
if(h==0):
	print("SIM")
else:
	print("NAO")
	

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:58:40) 
-- CODE:
x=int(input("qual seu numero?"))
f= x//1 %100
h= x%f
if(h==0):
	print("SIM")
else:
	print("NAO")
	

-- EXECUTION TIME:
0.172457
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
